--- a/package.json
+++ b/package.json
@@ -4,5 +4,5 @@
   "description": "Font files and licenses for fonts separated by folders.",
   "main": "index.js",
   "author": "SpotDev <dev@spotcare.ca> (https://dev.spotcare.ca/)",
-  "license": "See LICENSE file in the relevant font folder."
+  "license": "See LICENSE.txt file in the relevant font folder."
 }
